--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
             <input type="text" placeholder="enter city name">
             <button><img src="/Images/search.png" alt=""></button>
         </div>
+        <div class="error">
+            <p>Invalid City Name</p>
+        </div>
         <div class="container">
             <img src="/Images/rain.png" class="weather-icon">
             <h2 class="temp">22°c</h2>
